On fonce un tout petit peu les boîtes d'astuce

--- a/intro.Rnw
+++ b/intro.Rnw
@@ -67,7 +67,7 @@
   \end{lrbox}%
   \vspace{3ex}%
   \begin{center}%
-    \fcolorbox{grisfonce}{grisclair}{\usebox{\fcolbox}}%
+    \fcolorbox{grisfonce}{grisinterm}{\usebox{\fcolbox}}%
   \end{center}
   \vspace{3ex}%
 }
