--- a/intro.Rnw
+++ b/intro.Rnw
@@ -3069,6 +3069,7 @@ table(d$age6cl)
 
 
 \subsection{Regrouper les modalités d'une variable}
+\label{regrouper_modalites}
 
 Pour regrouper les modalités d'une variable qualitative (d'un facteur
 le plus souvent), on peut utiliser directement l'indexation.
@@ -4009,6 +4010,7 @@ abline(reg, col="red")
 \label{fig_regcad}
 \end{figure}
 
+\label{astuce_formules}
 \begin{astuce}
   On remarquera que le premier argument passé à la fonction \rfunc{lm} a une 
   syntaxe un peu particulière. Il s'agit d'une \textit{formule}, utilisée de
@@ -4374,7 +4376,7 @@ Dans ce qui suit, on utilisera le jeu de données tiré de l'enquête
 \texttt{poids}\footnote{On notera que cette variable est utilisée à
   titre purement illustratif. Le jeu de données étant un extrait
   d'enquête et la variable de pondération n'ayant pas été recalculée,
-elle n'a ici à proprement parler aucun sens.}.
+  elle n'a ici à proprement parler aucun sens.}.
 
 
 <<>>=
