--- a/intro.Rnw
+++ b/intro.Rnw
@@ -4956,7 +4956,10 @@ variables d'intérêt sous forme de formule, puis l'objet \textit{design}.
 L'intervalle de confiance d'une moyenne s'obtient avec \rfunc{confint} et
 celui d'une proportion avec \rfunc{svyciprop}.
 
-Voyons tout de suite quelques exemples~:
+Voyons tout de suite quelques exemples\footnote{
+  Pour d'autres examples, voir 
+  \url{http://www.ats.ucla.edu/stat/r/faq/svy_r_oscluster.htm} (en anglais).
+}~:
 
 <<>>=
 svymean(~age, dw)
